--- a/courses/published/css/selfpaced.css
+++ b/courses/published/css/selfpaced.css
@@ -48,6 +48,15 @@ iframe {
   margin: 20px 20px;
 }
 
+.instruction-content.video-container {
+  margin: 0;
+}
+
+.video-container {
+  width: 100%;
+  height: 640px;
+}
+
 .content.section, #lesson {
   display: flex;
   flex: 1 1 auto;
