--- a/courses/published/css/selfpaced.css
+++ b/courses/published/css/selfpaced.css
@@ -45,22 +45,24 @@ iframe {
 }
 
 .instruction-content {
+  display: flex;
+  flex-flow: column;
+  flex-shrink: 0;
+  flex-grow: 3;
   margin: 20px 20px;
 }
 
-.instruction-content.video-container {
+.video-container,
+.video-container > iframe{
   margin: 0;
-}
-
-.video-container {
+  height: 480px;
   width: 100%;
-  height: 640px;
 }
 
-.content.section, #lesson {
+#lesson {
   display: flex;
   flex: 1 1 auto;
-  height: inherit;
+  height: 100%;
 }
 
 #terminal iframe {
@@ -78,7 +80,7 @@ iframe {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: inherit;
+  height: 100%;
 }
 
 #instructions {
